<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>fr.unice.polytech.isa</groupId>
    <artifactId>ws-cycle-services</artifactId>
    <packaging>war</packaging>
    <version>1.0-SNAPSHOT</version>
    <name>ISA :: Cyclic References :: Services</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <versions.tomee.embedded>1.7.3</versions.tomee.embedded>
        <versions.openjpa>2.4.1</versions.openjpa>
        <versions.myface>2.2.10</versions.myface>
        <versions.javaee>6.0-6</versions.javaee>
        <versions.openejb>4.7.4</versions.openejb>
        <versions.tomee>1.7.3</versions.tomee>
    </properties>

    <repositories>
        <!-- Snapshot repository to access to the latest version of the OpenEJB framework -->
        <repository>
            <id>apache-m2-snapshot</id>
            <name>Apache Snapshot Repository</name>
            <url>https://repository.apache.org/content/groups/snapshots</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Dependencies for the OpenEJB framework (provided at runtime by the app server) -->
        <dependency>
            <groupId>org.apache.openejb</groupId>
            <artifactId>javaee-api</artifactId>
            <version>${versions.javaee}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.openejb</groupId>
            <artifactId>openejb-core</artifactId>
            <version>${versions.openejb}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.openejb</groupId>
            <artifactId>tomee-embedded</artifactId>
            <version>${versions.tomee}</version>
            <scope>provided</scope>
        </dependency>
        <!-- Dependencies for the testing frameworks (Junit, Mockito & Arquillian) (tests only) -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.junit</groupId>
            <artifactId>arquillian-junit-container</artifactId>
            <version>1.1.5.Final</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.shrinkwrap.resolver</groupId>
            <artifactId>shrinkwrap-resolver-depchain</artifactId>
            <version>2.1.1</version>
            <type>pom</type>
            <scope>test</scope>
        </dependency>
        <!-- Application server: Tomee (tests only) -->
        <dependency>
            <groupId>org.apache.openejb</groupId>
            <artifactId>arquillian-tomee-embedded</artifactId>
            <version>${versions.tomee.embedded}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <finalName>ws-demo</finalName>
        <defaultGoal>package</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.openejb.maven</groupId>
                <artifactId>tomee-maven-plugin</artifactId>
                <version>${versions.tomee.embedded}</version>
                <configuration>
                    <!-- From TomEE to TomEE+ to support the web services stack -->
                    <tomeeClassifier>plus</tomeeClassifier>
                    <args>-Xmx512m -XX:PermSize=256m</args>
                    <deployOpenEjbApplication>true</deployOpenEjbApplication>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
